RESOLVED FIXED218353
[GTK4] Web view is incorrectly scaled on hidpi
https://bugs.webkit.org/show_bug.cgi?id=218353
Summary [GTK4] Web view is incorrectly scaled on hidpi
Alice Mikhaylenko
Reported 2020-10-29 13:52:23 PDT
Created attachment 412682 [details] Screenshot See screenshot. It's also flipped, but that's a separate issue, scaling was there before it and I only reported it now.
Attachments
Screenshot (1.12 MB, image/png)
2020-10-29 13:52 PDT, Alice Mikhaylenko
no flags
Patch (1.94 KB, patch)
2020-12-12 07:42 PST, Alice Mikhaylenko
no flags
Alice Mikhaylenko
Comment 1 2020-10-29 13:54:58 PDT
Since AC mode seems to be always enavled in GTK4 builds: Wayland, Fedora 33, Mesa Intel® UHD Graphics (CML GT2)
Alice Mikhaylenko
Comment 2 2020-12-12 07:42:56 PST
EWS
Comment 3 2020-12-12 14:35:06 PST
Committed r270741: <https://trac.webkit.org/changeset/270741> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416096 [details].
Note You need to log in before you can comment on or make changes to this bug.