[GTK4] Web view is incorrectly scaled on hidpi https://bugs.webkit.org/show_bug.cgi?id=218353

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2020-12-12
Reviewed by Adrian Perez de Castro.

* UIProcess/gtk/AcceleratedBackingStoreWayland.cpp:
(WebKit::AcceleratedBackingStoreWayland::snapshot): Account for the scale factor.

Canonical link: https://commits.webkit.org/232404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270741 268f45cc-cd09-0410-ab3c-d52691b4dbfc